# MathBlackBox-SelfReflect

./: anal.py  cleanlocks.py  ends_all_server.py  eval.ipynb  gen_mcts_dpo.py  make_n_server.py  pyproject.toml  run.py  run_olympics.py  run_with_earlystopping.py  server.csv  viz.ipynb  work.py
configs/: math_config.py
