[tool.poetry]
name = "mathblackbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^3.1.0"
transformers = "^4.46.2"
openai = "^1.54.4"
vllm = "^0.6.3.post1"
retry = "^0.9.2"
litellm = "^1.52.8"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
